FIX: added z-index: 10 to the link box to make it appear on top when hovered
Visual glitch of the link appearing behind other buttons when hovered, so
added z-index = 10 to make it appear over other links.

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -35,6 +35,7 @@
 
 .linkOutlineBox:hover {
   transform: scale(1.2);
+  z-index: 10;
 }
 
 .linkOutlineBox:hover .skewBox {
@@ -67,7 +68,6 @@
   opacity: 0%;
   z-index: 1;
   transition: transform 0.5s, border 0.5s;
-  
 }
 
 @keyframes shine {
